--- a/CentOS-7/dovecot-sql.conf
+++ b/CentOS-7/dovecot-sql.conf
@@ -1,5 +1,5 @@
 driver = mysql
-connect = host=${VMB_DB_HOST} dbname=VMB_DB_NAME user=VMB_DB_USER_NAME password=VMB_PASSGEN
+connect = host=VMB_DB_HOST dbname=VMB_DB_NAME user=VMB_DB_USER_NAME password=VMB_PASSGEN
 default_pass_scheme = SSHA512
 
 password_query = SELECT username as user, password as password, \
