--- a/CentOS-7/clamav-milter.conf
+++ b/CentOS-7/clamav-milter.conf
@@ -1,5 +1,5 @@
-MilterSocket inet:127.0.0.1:7357
-MilterSocketMode 777
+MilterSocket inet:7357@127.0.0.1
+MilterSocketMode 660
 FixStaleSocket yes
 AllowSupplementaryGroups yes
 PidFile /var/run/clamav-milter/clamav-milter.pid
