--- a/CentOS-7/clamav-milter.conf
+++ b/CentOS-7/clamav-milter.conf
@@ -10,8 +10,11 @@ OnInfected Reject
 OnFail Defer
 RejectMsg Rejecting harmful email: %v found.
 AddHeader Add
-#VirusAction /usr/local/bin/my_infected_message_handler
+VirusAction /etc/postfix/virus_alert.sh
+SupportMultipleRecipients yes
+LogFile /tmp/clamav-milter.log
 LogFileMaxSize 0
 LogTime yes
 LogSyslog yes
 LogFacility LOG_MAIL
+LogInfected Basic
