--- a/CentOS-7/clamav-milter.conf
+++ b/CentOS-7/clamav-milter.conf
@@ -10,7 +10,7 @@ OnInfected Reject
 OnFail Defer
 RejectMsg Rejecting harmful email: %v found.
 AddHeader Add
-VirusAction /etc/postfix/virus_alert.sh
+VirusAction /etc/clamd.d/virus_alert.sh
 SupportMultipleRecipients yes
 LogFile /tmp/clamav-milter.log
 LogFileMaxSize 0
