--- a/CentOS-7/dovecot.conf
+++ b/CentOS-7/dovecot.conf
@@ -5,6 +5,9 @@ log_timestamp = "%Y-%m-%d %H:%M:%S "
 mail_location = maildir:/home/vmail/%d/%n
 mail_privileged_group = vmail
 
+auth_cache_size = 8192
+auth_cache_ttl = 86400
+
 ssl = required
 
 ssl_cert = <VMB_SSL_CRT
